@@ -2,6 +2,7 @@ Release notes for Matlisp 2.0
 
 2011-02-17
  * Use asdf2 instead of mk:defsys to build the Lisp code.
+ * Add GELSY.  From Evan Monroig, with permission.
 
 2011-01-25
 
